--- a/src/App.css
+++ b/src/App.css
@@ -282,10 +282,6 @@ nav.navbar .navbar-toggler.collapsed .navbar-toggler-icon {
   padding-top: 12px;
 }
 
-.about-left{
-  
-}
-
 .about-row-image{
   display: flex;
   align-items: center;
@@ -312,10 +308,6 @@ nav.navbar .navbar-toggler.collapsed .navbar-toggler-icon {
   padding: 20px !important;
 }
 
-.projects-row{
-
-}
-
 @media (max-width:575px) {
   .projects{
     padding-top: 0px;
@@ -334,7 +326,7 @@ nav.navbar .navbar-toggler.collapsed .navbar-toggler-icon {
   border-radius: 0px !important;
   border: none !important;
   box-shadow: 0 13px 27px -5px hsla(240, 30.1%, 28%, 0.25), 0 8px 16px -8px hsla(0, 0%, 0%, 0.3), 0 -6px 16px -6px hsla(0, 0%, 0%, 0.03);
-  transition: all ease 200ms;
+  /*transition: all ease 200ms;*/
   height: auto !important;
 }
 
@@ -367,10 +359,12 @@ nav.navbar .navbar-toggler.collapsed .navbar-toggler-icon {
   border: none !important;
 }
 
+/*
 .projects-card:hover {
   transform: scale(1.02);
   box-shadow: 0 13px 40px -5px hsla(240, 30.1%, 28%, 0.12), 0 8px 32px -8px hsla(0, 0%, 0%, 0.14), 0 -6px 32px -6px hsla(0, 0%, 0%, 0.02);
 }
+*/
 
 /* Carousel Cards */
 .rec.rec-carousel-wrapper .rec-slider-container {
